--- a/resume.tex
+++ b/resume.tex
@@ -1,52 +1,42 @@
 % !TEX program = xelatex
 
 \documentclass{resume}
+%\usepackage{tabu}
+%\usepackage{multirow}
+%\usepackage{progressbar}
 %\usepackage{zh_CN-Adobefonts_external} % Simplified Chinese Support using external fonts (./fonts/zh_CN-Adobe/)
 %\usepackage{zh_CN-Adobefonts_internal} % Simplified Chinese Support using system fonts
 
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
-\name{Bin Yuan}
+\name{Jin Hangyu}
 
 \basicInfo{
-  \email{yuanbin2014@gmail.com} \textperiodcentered\ 
-  \phone{(+86) 131-221-87xxx} \textperiodcentered\ 
-  \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}}
-
+  \email{735525714@qq.com} \textperiodcentered\ 
+}
 \section{\faGraduationCap\ Education}
-\datedsubsection{\textbf{Shanghai Jiao Tong University (SJTU)}, Shanghai, China}{2013 -- Present}
-\textit{Master student} in Electronics Engineering (EE), expected March 2016
-\datedsubsection{\textbf{Xidian University}, Shaanxi, China}{2009 -- 2013}
-\textit{B.S.} in Electronics Engineering (EE)
+\datedsubsection{\textbf{Sun Yat-sen University (SYSU)}, Guangzhou, China}{2016 - Present}
+\textit{Undergraduate} in Financial Management (FM), GPA: 3.7/4
 
-\section{\faUsers\ Experience}
-\datedsubsection{\textbf{FLAG Inc.} California, America}{2012 -- Present}
-\role{Summer Intern}{Manager: xxx}
-Brief introduction: xxx.
-\begin{itemize}
-  \item Implemented xxx feature
-  \item Optimized xxx 5\%
-  \item xxx
-\end{itemize}
+\textbf{Major courses}: Accounting, Derivatives and Options, Financial statement analysis, Advanced mathematics,
+Linear algebra, Probability and Statistics, MIS, Auditing, Monetary and Banking, Econometrics
 
-\datedsubsection{\textbf{xxx Projects}}{Jan. 2015 -- Present}
-\role{C, Python, Django, Linux}{Individual Projects, collaborated with xxx}
-Brief introduction: xxx
-\begin{itemize}
-  \item Implemented xxx feature
-  \item Optimized xxx 5\%
-  \item xxx
-\end{itemize}
+\section{\faUsers\ Campus Activity}
+\datedsubsection{\textbf{Association Department of the Communist Youth League}}{2016/09 - 2017/06}
 
-\datedsubsection{\textbf{\LaTeX\ résumé template}}{May. 2015 -- Present}
-\role{\LaTeX, Maintainer}{Individual Projects}
-An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
-\begin{itemize}
-  \item Easy to be further customized or extended
-  \item Full support for unicode characters (e.g. CJK) with \XeLaTeX\
-  \item FontAwesome 4.5.0 support
-\end{itemize}
+\textbf{Experience}: Organized and planned activities, mainly responsible for stage planning, Independently responsible for joint activities and sponsorship activities among Universities, Operated public accounts
+
+\datedsubsection{\textbf{The Guitar Association}}{2016/09 - 2017/01}
+
+\section{\faCogs\ Internship}
+\datedsubsection{\textbf{Bank of East Asia, Guangzhou Branch}\textit{(Enterprise Banking Department)}}{2018/07 - 2018/09}
+
+\textbf{Experience}: Vertificated business credit, Wrote credit report, Developed enterprise credit granting and intermediate business products
+
+\datedsubsection{\textbf{The Pacific Securities, Headquarter}\textit{(Asset Management Department)}}{2019/01 - present}
+
+\textbf{Experience}: Fixed income and equity management services, Market value management, Asset securitization, Realized fixed growth in the first-and-a-half market
 
 % Reference Test
 %\datedsubsection{\textbf{Paper Title\cite{zaharia2012resilient}}}{May. 2015}
@@ -55,22 +45,29 @@ An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
 %  \item main contribution
 %\end{itemize}
 
-\section{\faCogs\ Skills}
-\begin{itemize}[parsep=0.5ex]
-  \item Programming Languages: C == Python > C++ > Java
-  \item Platform: Linux
-  \item Development: Web, xxx
-\end{itemize}
+\section{\faFlask\ Academic Research}
+\textbf{Modeling Report}: Time Estimation and Strategic Analysis of Tesla’s Electric Popularization, Optimizing Passenger Throughput at Airport Security Station, Optimizing Bus Route Query Algorithms, Research on the Rationality of Option Pricing Model
+
+\datedsubsection{\textbf{Scientific research ability}: Participated in the school postdoctoral research team}{2018/03 – Present}
+
+\textit{Direction}: Game Theory and Mechanism Design, had read dozens of papers abroad, writing paper now
+
+\datedsubsection{MSCI}{2019/02 - present}
+
+Used Python, \textit{M}ATLAB and other tools to study the distribution of random variables, option pricing, computed the VaR and the Expected Shortfall of portfolio, optimized pricing model and evaluated enterprise investment
 
 \section{\faHeartO\ Honors and Awards}
-\datedline{\textit{\nth{1} Prize}, Award on xxx }{Jun. 2013}
-\datedline{Other awards}{2015}
+Sun Yat-Sen University Excellent Student Scholarship
 
-\section{\faInfo\ Miscellaneous}
+\datedline{\textit{\nth{2} Prize}, Bridge+ National Youth Business Simulation Competition }{Oct. 2016}
+\datedline{\textit{\nth{2} Prize}, ”Mathematics Innovation Cup” National University Mathematical Modeling Competition}{Nov. 2017}
+\datedline{\textit{Honorable Mention}, Mathematical Contest In Modeling}{Feb. 2018}
+
+\section{\faInfo\ Skill}
 \begin{itemize}[parsep=0.5ex]
-  \item Blog: http://your.blog.me
-  \item GitHub: https://github.com/username
-  \item Languages: English - Fluent, Mandarin - Native speaker
+  \item \textbf{Mathematical Analysis Ability}: Have clear logic, the mathematics courses in university are all above 95 points, minoring in the relevant courses of the College of Mathematics, had Mathematical modeling experience, proficient in using \textif{M}atlab, \LaTeX and Python
+  \item \textbf{Data Analysis Ability}: Can effectively collect data and use database to analyse
+  \item  \textbf{Organizational Planning Ability}: Planned two school-level stage activities, organized many sponsorship activities with enterprises, have good communication and crisis management skills
 \end{itemize}
 
 %% Reference
