--- a/resume.tex
+++ b/resume.tex
@@ -54,7 +54,7 @@ Linear algebra, Probability and Statistics, MIS, Auditing, Monetary and Banking,
 
 \datedsubsection{MSCI}{2019/02 - present}
 
-Used Python, \textit{M}ATLAB and other tools to study the distribution of random variables, option pricing, computed the VaR and the Expected Shortfall of portfolio, optimized pricing model and evaluated enterprise investment
+Used Python, \textit{M}atlab and other tools to study the distribution of random variables, option pricing, computed the VaR and the Expected Shortfall of portfolio, optimized pricing model and evaluated enterprise investment
 
 \section{\faHeartO\ Honors and Awards}
 Sun Yat-Sen University Excellent Student Scholarship
@@ -65,7 +65,7 @@ Sun Yat-Sen University Excellent Student Scholarship
 
 \section{\faInfo\ Skill}
 \begin{itemize}[parsep=0.5ex]
-  \item \textbf{Mathematical Analysis Ability}: Have clear logic, the mathematics courses in university are all above 95 points, minoring in the relevant courses of the College of Mathematics, had Mathematical modeling experience, proficient in using \textif{M}atlab, \LaTeX and Python
+  \item \textbf{Mathematical Analysis Ability}: Have clear logic, the mathematics courses in university are all above 95 points, minoring in the relevant courses of the College of Mathematics, had Mathematical modeling experience, proficient in using \textit{M}atlab, \LaTeX and Python
   \item \textbf{Data Analysis Ability}: Can effectively collect data and use database to analyse
   \item  \textbf{Organizational Planning Ability}: Planned two school-level stage activities, organized many sponsorship activities with enterprises, have good communication and crisis management skills
 \end{itemize}
