--- a/resume.tex
+++ b/resume.tex
@@ -34,7 +34,7 @@ Linear algebra, Probability and Statistics, MIS, Auditing, Monetary and Banking,
 
 \textbf{Experience}: Vertificated business credit, Wrote credit report, Developed enterprise credit granting and intermediate business products
 
-\datedsubsection{\textbf{The Pacific Securities, Headquarter}\textit{(Asset Management Department)}}{2019/01 - present}
+\datedsubsection{\textbf{The Pacific Securities, Headquarter}\textit{(Asset Management Department)}}{2019/01 - Present}
 
 \textbf{Experience}: Fixed income and equity management services, Market value management, Asset securitization, Realized fixed growth in the first-and-a-half market
 
@@ -52,7 +52,7 @@ Linear algebra, Probability and Statistics, MIS, Auditing, Monetary and Banking,
 
 \textit{Direction}: Game Theory and Mechanism Design, had read dozens of papers abroad, writing paper now
 
-\datedsubsection{MSCI}{2019/02 - present}
+\datedsubsection{MSCI}{2019/02 - Present}
 
 Used Python, \textit{M}atlab and other tools to study the distribution of random variables, option pricing, computed the VaR and the Expected Shortfall of portfolio, optimized pricing model and evaluated enterprise investment
 
